--- a/src/app/components/listado-mascota/listado-mascota.component.html
+++ b/src/app/components/listado-mascota/listado-mascota.component.html
@@ -43,6 +43,9 @@
 
 
       </table>
+      <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                 aria-label="Select page of periodic elements">
+  </mat-paginator>
 </div>
 
 
