--- a/src/app/components/ver-mascota/ver-mascota.component.html
+++ b/src/app/components/ver-mascota/ver-mascota.component.html
@@ -1,1 +1,20 @@
-<p>ver-mascota works!</p>
+<div class="title">
+    <h1>Ver mascota</h1>
+</div>
+<div class="container">
+    <mat-card class="card">
+        <mat-card-title>Jirgort</mat-card-title>
+        <mat-card-content>
+            
+            <p><strong>Raza:</strong> Labrador</p>
+            <p><strong>Color:</strong> Negro</p>
+            <p><strong>Peso:</strong> 10 kg</p>
+            <p><strong>Edad:</strong> 5 anos</p>
+
+        </mat-card-content>
+        <mat-card-actions>
+            <button routerLink="/listMascotas" mat-raised-button>Volver</button>
+        </mat-card-actions>
+
+    </mat-card>
+</div>
