--- a/src/app/components/ver-mascota/ver-mascota.component.html
+++ b/src/app/components/ver-mascota/ver-mascota.component.html
@@ -1,15 +1,18 @@
 <div class="title">
     <h1>Ver mascota</h1>
 </div>
-<div class="container">
+<app-spinner *ngIf="loading">
+
+</app-spinner>
+<div *ngIf="mascota !=null" class="container">
     <mat-card class="card">
-        <mat-card-title>Jirgort</mat-card-title>
+        <mat-card-title>{{mascota.nombre}}</mat-card-title>
         <mat-card-content>
             
-            <p><strong>Raza:</strong> Labrador</p>
-            <p><strong>Color:</strong> Negro</p>
-            <p><strong>Peso:</strong> 10 kg</p>
-            <p><strong>Edad:</strong> 5 anos</p>
+            <p><strong>Raza:</strong>{{mascota.raza}}</p>
+            <p><strong>Color:</strong> {{mascota.color}}</p>
+            <p><strong>Peso:</strong> {{mascota.peso}}</p>
+            <p><strong>Edad:</strong> {{mascota.edad}}</p>
 
         </mat-card-content>
         <mat-card-actions>
